<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="R.string.toast_no_document_provider">No DocumentProvider available to handle permission request</string>
    <string name="playlist_save_exists">Playlist already exists</string>
    <string name="playlist_save_failed">Couldn\'t save playlist</string>
    <string name="playlist_saved">Playlist saved to <xliff:g id="path">%s</xliff:g></string>
    <string name="blacklist_deleted">Blacklist deleted</string>
    <string name="whitelist_deleted">Whitelist deleted</string>
    <string name="delete_folder_failed">Error deleting folder.\n\nThis folder might be write protected.</string>
    <string name="delete_file_failed">Error deleting file.\n\nThis file might be write protected.</string>
    <string name="rename_folder_failed">Error renaming folder.\n\nThis folder might be write protected, or a folder with the same name already exists.</string>
    <string name="rename_file_failed">Error renaming file.\n\nThis file might be write protected, or a file with the same name already exists.</string>
    <string name="shuffle_on_notif">Shuffle on</string>
    <string name="shuffle_off_notif">Shuffle off</string>
    <string name="repeat_off_notif">Repeat off</string>
    <string name="repeat_current_notif">Repeat current song</string>
    <string name="repeat_all_notif">Repeat all songs</string>
    <string name="ringtone_menu">Set as ringtone</string>
    <string name="ringtone_set">\"<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="ringtone_set_failed">Couldn\'t set ringtone</string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g example="27" id="number">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="and">\u0020and\u0020</string>
    <string name="hour">\u0020hour</string>
    <string name="hours">\u0020hours</string>
    <string name="minutes">\u0020minutes</string>
    <string name="sleep_message">Sleep timer set for\u0020</string>
    <string name="initial_dir_set_message">\u0020set as initial directory</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <plurals name="NNNtrackstoqueue">
        
        <item quantity="one">1 song added to queue.</item>
        
        <item quantity="other">
            <xliff:g example="27" id="number">%d</xliff:g>
            songs added to queue.
        </item>
    </plurals>
    <plurals name="NNNtrackstofavourites">
        
        <item quantity="one">1 song added to favorites.</item>
        
        <item quantity="other"><xliff:g example="27" id="number">%d</xliff:g> songs added to favorites.</item>
    </plurals>
    <string name="song_to_favourites"><xliff:g id="song_name">%s</xliff:g> added to favorites.</string>
    <string name="song_removed_from_favourites"><xliff:g id="song_name">%s</xliff:g> removed from favorites.</string>
    <string name="restart_tite">Restart required</string>
    <string name="restart_message">These changes won\'t take effect until you restart Shuttle</string>
    <string name="restart_button">Restart now</string>
    <string name="color_pick">Pick a Color</string>
    <string name="dialog_custom">Custom</string>
    <string name="share_failed">Sorry, this file couldn\'t be shared</string>
    <string name="share_dialog_title">What do you want to share?</string>
    <string name="share_option_song_info">Now playing info</string>
    <string name="share_option_audio_file">The audio file</string>
    <string name="share_via">Share song via:</string>
    <string name="saving_playlist">Saving playlist</string>
    <string name="gathering_songs">Gathering songs…</string>
    <string name="get_pro_title">Upgrade to Shuttle+</string>
    <string name="get_pro_message">If you like Shuttle, please consider upgrading.
        \n\nFeatures:
        \n• Tons of extra themes
        \n• Tag editing
        \n• Folder browsing
        \n• ChromeCast Support\n
        \nIt also helps to promote further development.</string>
    <string name="upgraded_title">Thank You</string>
    <string name="upgraded_message">You have successfully upgraded to Shuttle+. I appreciate the support.
        \n\nPlease restart the app to ensure all features are enabled</string>
    <string name="upgrade_dialog_message">Upgrading will unlock additional features in Shuttle, including:
        \n\n• Tons of extra themes
        \n• Tag editing
        \n• Folder browsing
        \n• ChromeCast Support
        \n\nIt also helps to promote further development.\n\nYou do not need to upgrade if you already have Shuttle+</string>
    <string name="get_pro_button_play_store">Play Store</string>
    <string name="get_pro_button_amazon">Amazon</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="get_pro_button_no">No thanks</string>
    <string name="close">Close</string>
    <string name="connection_unavailable">Internet connection unavailable</string>
    <string name="create_playlist_create_text_prompt">Playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="delete_album_artist_desc">All songs by <xliff:g id="album-artist">%s</xliff:g> will be permanently deleted.</string>
    <string name="delete_album_artist_desc_multiple">All songs by the following album artists:<xliff:g id="album-artist">%s</xliff:g>will be permanently deleted.</string>
    <string name="delete_album_desc">All songs from the album <xliff:g id="album">%s</xliff:g> will be permanently deleted.</string>
    <string name="delete_album_desc_multiple">All songs from the following albums:<xliff:g id="album">%s</xliff:g>will be permanently deleted.</string>
    <string name="delete_song_desc"><xliff:g id="song">%s</xliff:g> will be permanently deleted.</string>
    <string name="delete_song_desc_multiple">The following songs:<xliff:g id="song">%s</xliff:g>will be permanently deleted.</string>
    <string name="delete_songs_success_toast"><xliff:g id="number">%d</xliff:g> songs deleted.</string>
    <string name="delete_songs_failure_toast">Couldn\'t delete songs.</string>
    <string name="button_ok">OK</string>
    <string name="delete_folder_confirmation_dialog">Are you sure you want to permanently delete \"<xliff:g id="folder">%s</xliff:g>\"? All items in this folder will be deleted, including items which might not be visible in the Wavevine file browser.</string>
    <string name="delete_file_confirmation_dialog">Are you sure you want to permanently delete \"<xliff:g id="file">%s</xliff:g>\"?</string>
    <string name="delete_artwork_confirmation_dialog">Are you sure you want to permanently delete all artwork from the device?</string>
    <string name="dialog_title_set_ringtone">Set Ringtone</string>
    <string name="dialog_message_set_ringtone">Wavevine requires permission to \'write settings\' in order to set your ringtone.\n\nAfter granting permission, try setting your ringtone again.</string>
    <string name="dialog_message_playlist_add_duplicate"><xliff:g id="artist">%s</xliff:g> - <xliff:g id="song">%s</xliff:g> already exists in this playlist. Add it anyway?</string>
    <string name="dialog_checkbox_playlist_duplicate_apply_all">Apply to all (<xliff:g id="number">%d</xliff:g>)</string>
    <string name="dialog_title_playlist_duplicates">Duplicates Found</string>
    <string name="dialog_button_playlist_duplicate_add">Add</string>
    <string name="dialog_button_playlist_duplicate_skip">Skip</string>
    <string name="dialog_checkbox_playlist_duplicate_always_add">Always add duplicates</string>
    <string name="widget_background_color">Background</string>
    <string name="widget_background_transparency">Transparency</string>
    <string name="widget_text_color">Text</string>
    <string name="widget_invert_icons">Invert icons</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="widget_show_artwork">Show album art</string>
    <string name="export_playlist">Export playlist</string>
    <string name="clear_queue">Clear queue</string>
    <string name="fav_add">Add to Favorites</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="new_playlist">New</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="play_next">Play next</string>
    <string name="settings">Settings</string>
    <string name="fav_title">Favorites</string>
    <string name="cue_title">Cues</string>
    <string name="library_title">Library</string>
    <string name="share_title">Share</string>
    <string name="search_title">Search</string>
    <string name="search_filter">Filter</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="clear_playlist_menu">Clear</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="nowplaying_title">Now Playing</string>
    <string name="up_next_title">Up Next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="go_to">Go to…</string>
    <string name="heading_more">More</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pref_title_theme_white_accent">Use White Accent</string>
    <string name="pref_summary_theme_white_accent">Uses white for all color accents, except those which need to show state (shuffle and repeat need a color other than white to show they are turned on).</string>
    <string name="pref_category_navigation">Navigation</string>
    <string name="pref_category_notif_drawer">Notification Drawer</string>
    <string name="pref_title_invert_notif_icons">Invert Notification Icons/Text</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_title_choose_tabs">Choose Tab Items</string>
    <string name="pref_summary_choose_tabs">Choose &amp; rearrange categories displayed as tabs at the top of the screen</string>
    <string name="pref_title_theme_pick_color">Theme Color</string>
    <string name="pref_summary_theme_pick_color">Choose the color for your theme</string>
    <string name="pref_title_theme_pick_accent_color">Accent Color</string>
    <string name="view_as_title">View as</string>
    <string name="view_options_list">List</string>
    <string name="view_options_grid">Grid</string>
    <string name="view_options_grid_palette">Grid: Palette</string>
    <string name="view_options_grid_card">Grid: Cards</string>
    <string name="menu_grid_size">Grid size</string>
    <string name="folders_title">Folders</string>
    <string name="song_info">Song Info</string>
    <string name="btn_play">Play</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_repeat_current">Repeat current</string>
    <string name="btn_repeat_all">Repeat all</string>
    <string name="btn_show_queue">Show queue</string>
    <string name="btn_drawer">Drawer Menu</string>
    <string name="btn_favor">Favorite</string>
</resources>