<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="?attr/btn_add"
        android:title="@string/add_to_playlist"
        android:visible="false"
        app:showAsAction="never">
        <menu>
            <item android:title="Placeholder"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_view_as"
        android:icon="?attr/btn_view_as_list"
        android:title="@string/menu_grid_size"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_add_to_queue"
        android:icon="?attr/btn_add2"
        android:title="@string/add_to_queue"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="?attr/btn_trashcan"
        android:title="@string/delete_item"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_cancel"
        android:icon="?attr/btn_cancel"
        android:title="@string/cancel"
        app:showAsAction="always"/>
</menu>