<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_add"
        android:icon="?attr/btn_add2"
        android:title="@string/new_playlist"
        app:showAsAction="always">
        <menu>
            <item android:title="Placeholder"/>
        </menu>
    </item>

    <item
        android:id="@+id/rename"
        android:icon="?attr/btn_edit"
        android:title="@string/rename_playlist_menu"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="?attr/btn_trashcan"
        android:title="@string/delete_item"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_cancel"
        android:icon="?attr/btn_cancel"
        android:title="@string/cancel"
        app:showAsAction="always"/>
</menu>