<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <FrameLayout
        android:layout_alignParentTop="true"
        android:id="@+id/dummyStatusBar"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp" >
    </FrameLayout>

    <FrameLayout
        android:id="@+id/dummyToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:layout_below="@+id/dummyStatusBar"
        android:minHeight="?attr/actionBarSize" />

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:background="?android:attr/windowBackground"
        tools:background="#B0363A"
         >

    </FrameLayout>

<!-- android:background="@color/amber_300" -->
    <FrameLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_mainplayer"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/seekBarContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/seek_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/current_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|left"
                        android:text="--:--"
                        android:textColor="@color/white"
                        android:maxLines="1" />

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">
                        <TextView
                            android:id="@+id/bitrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:gravity="center_vertical|center"
                            android:textColor="@color/white"
                            tools:text="24bit/192KHz"
                            android:maxLines="1" />

                        <TextView
                            android:id="@+id/queue_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:gravity="center_vertical|center"
                            android:textColor="@color/white"
                            tools:text="12/20"
                            android:maxLines="1" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/total_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|right"
                        android:text="--:--"
                        android:textColor="@color/white"
                        android:maxLines="1" />
                </LinearLayout>

                <com.simplecity.amp_library.ui.views.SizableSeekBar
                    android:id="@+id/seekbar"
                    style="@style/SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:indeterminate="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    tools:progress="60"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/textContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBarContainer"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="0dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/text1"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:text="Down In It" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Nine Inch Nails" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/textContainer"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/drawer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_drawer"
                        android:padding="12dp"
                        android:src="@drawable/btn_player_drawer" />
                    <ImageButton
                        android:id="@+id/shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/shuffle_all"
                        android:padding="12dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_shuffle_white"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.simplecity.amp_library.ui.views.RepeatingImageButton
                        android:id="@+id/prev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_prev"
                        android:src="@drawable/btn_player_rew" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.simplecity.amp_library.ui.views.PlayPauseView
                        android:id="@+id/play"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_play"/>

                    <ImageButton
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="0dp"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_play"
                        android:src="@drawable/btn_player_pause" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.simplecity.amp_library.ui.views.RepeatingImageButton
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_skip"
                        android:src="@drawable/btn_player_ff" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/favor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_favor"
                        android:padding="12dp"
                        android:src="@drawable/btn_player_favorites"/>
                    <ImageButton
                        android:id="@+id/repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/circular_ripple"
                        android:contentDescription="@string/btn_repeat_all"
                        android:padding="12dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_repeat_white"/>
                </FrameLayout>

            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_view"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-128dp"
        android:contentDescription="@string/btn_show_queue"
        android:src="@drawable/ic_queue_music_24dp"
        app:fabSize="normal"
        app:useCompatPadding="true"
        tools:tint="#fff"
        tools:visibility="visible" />


    <!--HI_RES
        android:layout_marginBottom="80dp"/>
        140 = 60 + 80
    -->
    <FrameLayout
        android:id="@+id/queue_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        >

        <LinearLayout
            android:id="@+id/subMenuContainer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/transparent_2f"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sub_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/circular_ripple"
                    android:contentDescription="@string/btn_repeat_current"
                    android:padding="12dp"
                    android:src="@drawable/btn_sub_replay" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sub_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/circular_ripple"
                    android:contentDescription="@string/shuffle_all"
                    android:padding="12dp"
                    android:src="@drawable/btn_sub_shuffle"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sub_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/circular_ripple"
                    android:contentDescription="@string/shuffle_all"
                    android:padding="12dp"
                    android:src="@drawable/btn_sub_list"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sub_lylic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/circular_ripple"
                    android:contentDescription="@string/shuffle_all"
                    android:padding="12dp"
                    android:src="@drawable/ic_action_lyrics_24dp"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sub_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/circular_ripple"
                    android:contentDescription="@string/song_info"
                    android:padding="12dp"
                    android:src="@drawable/btn_sub_search"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sub_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/circular_ripple"
                    android:contentDescription="@string/shuffle_all"
                    android:padding="12dp"
                    android:src="@drawable/btn_sub_delete"
                    android:visibility="visible" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <!--
    <com.simplecity.amp_library.ui.views.SizableSeekBar
        android:id="@+id/seekbar"
        style="@style/SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="-16.5dp"
        android:layout_marginRight="-16.5dp"
        android:indeterminate="false"
        tools:progress="60"/>
    -->

</RelativeLayout>